samples/_failures_safe/1761426793_a0071c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7e3e912.c: In function ‘main’:
./samples/SAFE/__tmp_a7e3e912.c:147:12: error: missing terminating " character
  147 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_a7e3e912.c:147:5: error: expected expression at end of input
  147 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_a7e3e912.c:147:5: error: expected declaration or statement at end of input
